app/assets/stylesheets/menu.scss
.menu-main-container {
    background-color: #3b3b3b;
    height: 100%;
    width: 100%;
}

.menu-body-main-container {
    font-family: 'Montserrat', sans-serif;
    padding: 10%;
}

.menu-body-content-container {
    display: flex;
    flex-direction: row;
    margin-top: 30px;
}

.menu-item-container {
    display: flex;
    flex-direction: column;
    margin-right: 30px;
    text-decoration: none;
}

.menu-item-image {
    width: 500px;
    height: 330px;
}

.menu-item-title {
    background-color: black;
    color: white;
    font-size: 11px;
    font-weight: 900;
    padding: 20px;
}

